# dotfiles

./: .gitignore  .nvimlog  .zshrc  CHANGELOG.md  LICENSE  PLAN-rust-quickshell-script-rewrite.md  README.md  install.sh
rust-tools/: Cargo.toml
rust-tools/bar-window-count/: Cargo.toml
rust-tools/bar-window-count/src/: main.rs
rust-tools/common/: Cargo.toml
rust-tools/common/src/: lib.rs
rust-tools/cycle-layout/: Cargo.toml
rust-tools/cycle-layout/src/: main.rs
rust-tools/cycle-sink/: Cargo.toml
rust-tools/cycle-sink/src/: main.rs
rust-tools/disk-usage/: Cargo.toml
rust-tools/disk-usage/src/: main.rs
rust-tools/hypridle-suspend/: Cargo.toml
rust-tools/hypridle-suspend/src/: main.rs
rust-tools/llama-choose/: Cargo.toml
rust-tools/llama-choose/src/: benchmark.rs  config.rs  db.rs  launch.rs  main.rs  meta.rs  tui.rs
rust-tools/mic-in-use/: Cargo.toml
rust-tools/mic-in-use/src/: main.rs
rust-tools/model-status/: Cargo.toml
rust-tools/model-status/src/: main.rs
rust-tools/quickshell-restart/: Cargo.toml
rust-tools/quickshell-restart/src/: main.rs
rust-tools/rofi-apps/: Cargo.toml
rust-tools/rofi-apps/src/: main.rs
rust-tools/rofi-tools/: Cargo.toml
rust-tools/rofi-tools/src/: main.rs
rust-tools/speak-tts/: Cargo.toml
rust-tools/speak-tts/src/: main.rs
rust-tools/system-metrics/: Cargo.toml
rust-tools/system-metrics/src/: main.rs
rust-tools/theme-apply/: Cargo.toml
rust-tools/tts-selection/: Cargo.toml
rust-tools/wallpaper-apply/: Cargo.toml
rust-tools/waveform/: Cargo.toml
rust-tools/wsflash/: Cargo.toml
(+471 files in other folders)
